--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,7 @@
 body {
-background-color: #dabfe787;
-margin: 0;
-width: 100%;
+  background-color: #dabfe787;
+  margin: 0;
+  width: 100%;
 }
 
 header {
@@ -10,29 +10,30 @@ header {
   justify-content: center;
   width: 100%;
 }
-h1{
+h1 {
   font-family: Moderustic;
   font-weight: 300;
   font-size: 44px;
   color: #9a4abf;
-
 }
 
-h2{
+h2 {
   font-size: 30px;
   font-weight: 400;
   font-family: Moderustic;
   text-align: center;
 }
 
-h3{
+h3 {
   font-size: 30px;
   font-weight: 380;
   font-family: Moderustic;
   margin: 0;
+  text-align: center;
+  padding: 10px;
 }
 
-span{
+span {
   font-family: Moderustic;
   font-weight: 380;
   font-size: 24px;
@@ -40,18 +41,23 @@ span{
   justify-content: center;
   align-items: center;
 }
-main{
+p {
+  font-family: Moderustic;
+  font-weight: 280;
+  font-size: 18px;
+  text-align: center;
+}
+main {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 #book {
-width: 500px;
-border: 2px solid #9a4abf;
-margin-bottom: 40px;
-
+  width: 500px;
+  border: 2px solid #9a4abf;
+  margin-bottom: 40px;
 }
 
-.d-none{
-display: none;
+.d-none {
+  display: none;
 }
