--- a/styles/addlike.css
+++ b/styles/addlike.css
@@ -1,19 +1,20 @@
-.heart{
-    width: 40px;
-    height: 40px;
-    padding: 30px;
-  }
-  .heart-liked{
-    width: 40px;
-    height: 40px;
-    padding: 30px;
-
-  }
-  .like{
-    font-family: Moderustic;
-    justify-content: center;
-    display: flex;
-    align-items: center;
-    font-weight: 500;
-    font-size: 18px;
-  }
+.heart_empty {
+  width: 40px;
+  height: 40px;
+  padding: 30px;
+  content: url("../img/heart-unliked.png");
+}
+.heart_filled {
+  width: 40px;
+  height: 40px;
+  padding: 30px;
+  content: url("../img/heart-liked.png");
+}
+.heart-liked {
+  font-family: Moderustic;
+  justify-content: center;
+  display: flex;
+  align-items: center;
+  font-weight: 500;
+  font-size: 18px;
+}
