--- a/styles/comments.css
+++ b/styles/comments.css
@@ -11,14 +11,14 @@
   justify-content: center;
   align-items: center;
 }
-#input-comment {
+.input-comment {
   border-radius: 5px;
   margin-top: 40px;
   width: 250px;
   padding: 10px;
   font-size: 15px;
 }
-#input-name {
+.input-name {
   border-radius: 5px;
   padding: 5px;
   width: 150px;
